# pyside-playground

./: README.md  pyproject.toml
pyside_demo/: __main__.py  model.py  style.qss  view.py
