[tool.poetry]
name = "pyside-demo"
version = "0.1.0"
description = ""
authors = ["lsouder-ozone3d <lonnie.souder@ozone3d.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pyside2 = "^5.15.2.1"
pyside2-stubs = "^5.15.2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
